# publicAItion-pipeline

./: .gitignore  DECISIONS.md  README.md  pyproject.toml
publicaition/api/: app.py  models.py  routes.py
publicaition/config/manuscript_types/: poster_abstract.json  primary_research.json  section_draft.json
publicaition/config/templates/: jama.json  nejm.json
publicaition/orchestrator/: dag.py  review.py  runner.py  state.py
publicaition/outputs/: docx.py  pdf.py  renderer.py
publicaition/services/: base.py  container.py  evaluation.py  few_shot.py  guidelines.py  llm.py  outline_parser.py  retrieval.py  templates.py  transcript_parser.py
publicaition/skills/: abstract.py  base.py  citations.py  cohesion.py  conclusion.py  discussion.py  introduction.py  methods.py  pls.py  registry.py  results.py
tests/: test_smoke.py
