[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["publicaition"]

[project]
name = "publicaition-pipeline"
version = "0.1.0"
description = "Manuscript generation pipeline for PublicAItion"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
